# long

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app_platform.h  app_shared.cpp  app_shared.h  bridge_batch_codec.cpp  bridge_batch_codec.h  bridge_batch_transport.cpp  bridge_batch_transport.h  controller.h  controller_claim.cpp  controller_claim.h  controller_mac.h  controller_mac.mm  d3d_helpers.cpp  d3d_helpers.h  dualsense_controller.cpp  dualsense_controller.h  ib_decimal_compat.cpp  mac_observability.h  mac_observability.mm  main.cpp  main.mm  mcp_enrichment_live_sanity.cpp  phase3_analyzers.cpp  phase3_analyzers.h  phase7_execution_smoke_main.cpp  platform_metal.cpp  platform_metal.h  platform_metal.mm  platform_win32.cpp  platform_win32.h  queues.yaml  runtime_qos.cpp  runtime_qos.h  runtime_registry.h  tape_bundle_inspection.cpp  tape_bundle_inspection.h  (+95 more)
.cache/clangd/index/: IXExponentialBackoff.h.B8B0A4300C4A4DE3.idx  IXGetFreePort.cpp.F414BC6B86566208.idx  IXGetFreePort.h.6D03ED140B374F85.idx  IXGzipCodec.cpp.1340392185DC50A7.idx  IXHttp.h.A8EE8E8B37812B67.idx  IXSelectInterruptPipe.cpp.E6C22EFF17AA6347.idx  IXSelectInterruptPipe.h.5D73B4DBD0815DFB.idx
build.mock/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  FixupBundle.cmake  Makefile  cmake_install.cmake  compile_commands.json  tws_gui_tests
build.mock/tws_gui.app/Contents/: Info.plist
build.mock/tws_gui.app/Contents/MacOS/: tws_gui
cmake/: FixupBundle.cmake.in  Info.plist.in  NotarizeBundle.cmake.in
config/runtime/: queues.yaml
docs/: phase5_mcp_compatibility_contract.md  phase7_analyzer_playbook_contract.md
scripts/: bootstrap_deps.sh
stubs/ibapi/: CommissionReport.h  ibapi_mock.h
tests/: tape_engine_ingest_tests.cpp  tape_mcp_contract_tests.cpp  trace_controller_claim_tests.inc  trace_core_tests.inc  trace_engine_analyzer_tests.inc  trace_engine_core_tests.inc  trace_runtime_tests.inc  trace_tapescope_tests.inc  trace_test_support.inc  trade_trace_tests.cpp
tests/fixtures/: bridge_batch_v1_order_fill.json  bridge_batch_v1_order_fill.msgpack.hex  phase3_investigation_contracts.json  phase5_mcp_contracts.json  phase6_engine_transport_contracts.json  phase7_execution_bridge_contracts.json  phase7_execution_runtime_mcp_contracts.json  phase7_execution_smoke_contracts.json  phase7_mcp_contracts.json  phase8_mcp_contracts.json  uw_ws_fixture_already_in_room.jsonl  uw_ws_fixture_ambient_global_only.jsonl  uw_ws_fixture_frames.jsonl  uw_ws_fixture_join_ack_only.jsonl  uw_ws_fixture_symbol_filter.jsonl  uw_ws_fixture_targeted_retry.jsonl
tools/: gemini_remote_uw_mcp.py  gemini_uw_mcp_session_async.py  generate_runtime_registry.py
